e2e/tests/snapshots/node_test__test_auto_install_node_with_node_version.snap
---
source: e2e/tests/node_test.rs
expression: res
---
name: "test_auto_install_node_with_node_version"

id: 1
is: node -v


stdout:v20.0.0
stderr:
