e2e/tests/snapshots/node_test__test_no_strict_and_no_default_node.snap
---
source: e2e/tests/node_test.rs
expression: res
snapshot_kind: text
---
id: 1
is: node -v

Error: No default Node.js version found
