e2e/tests/snapshots/node_test__test_show_node_version_with_strict_mode.snap
---
source: e2e/tests/node_test.rs
expression: res
---
name: "test_show_node_version_with_strict_mode"

id: 1
is: node -v

Error: In strict mode, a .node-version file must be configured in the current directory.
