e2e/tests/snapshots/node_test__test_with_strict_mode_and_has_default_node.snap
---
source: e2e/tests/node_test.rs
expression: res
snapshot_kind: text
---
id: 1
is: snm node install 20.0.0

🎉 Node v20.0.0 is installed

id: 2
is: snm node list --compact

20.0.0

id: 3
is: snm node default 20.0.0

🎉 Node v20.0.0 is now default

id: 4
is: snm node list --compact

-> 20.0.0

id: 5
is: node -v

Error: In strict mode, a .node-version file must be configured in the current directory.
